Edits to DX556's Proofread

--- a/Translation/Clean Intro.txt
+++ b/Translation/Clean Intro.txt
@@ -79,7 +79,7 @@
 		# Continuation
 特に断る理由もないので頷くと、そそくさと浴室へ向かっていく。=Since there was no reason to refuse, you nodded and let her go to the bathroom.
 脱ぎ散らかされた制服のポケットからは、彼女のパスケースがこぼれ落ちていた。=Her pass case fell down from the pocket of the uncluttered uniform.
-元に戻しておこうと近付くと、表面に収められていた学生証が目に留まる。=While you were putting it back, you couldn't help but saw her Student ID that was showing on the cover.
+元に戻しておこうと近付くと、表面に収められていた学生証が目に留まる。=While you were putting it back, you couldn't help but see her Student ID that was showing on the cover.
 「芹沢 夕　○○女子学院高等部Ｘ年」="Serizawa Yuu ○○ Girl's High School X Year"
 ……検索して調べてみると、有名なお嬢様学校のようだ。=...If you remembered correctly, it was a famous All-Girls Highschool.
 強請たかりの類いにしては脇が甘く、援助交際をするような風にも見えない。=It might be tempting to exploit her vulnerability, however, you were not that kind of person.
