--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -486,7 +486,7 @@
 
 
 けたけたと笑いながら、夕はベッドの上で四つん這いになって、ブルマが股に食い込んでいる様子を無邪気に見せつけてくる。=With a smile, Yuu got on all fours next to the bed, displaying her bloomers to you.
-ほら、スタートの時とかこんなんだしさ。お尻ほとんど見えちゃうじゃん。=Look, it's like the starting position for running. You can always see the butts.
+ほら、スタートの時とかこんなんだしさ。お尻ほとんど見えちゃうじゃん。=Look, it's like the starting position for running. You can always see the butt.
 ……ど、どうしたのおじさん？　黙って見つめられると、流石に恥ずかしいんだけど……。=...W-What's wrong, Oji-san? If you keep staring so intently, I'll get embarrassed.
 出会ったときから感じていたが、どうも夕は男に対して無防備過ぎる。=Since meeting Yuu, you'd noticed that she was not used to men.
 それが異性の視線がない環境で育ったせいだというなら、いたずらに挑発するとどうなるか、しっかりと教えておく必要があるだろう。=If she hadn't had much interaction with the opposite gender, she would need to be firmly taught what happened when you aroused a man.
@@ -494,7 +494,7 @@
 興奮のあまり歯止めの効かなくなったあなたはブルマをずらし、露わになった縦筋に勃起したペニスを擦りつける。=Overwhelmed by excitement, you shift her bloomers, rubbing your erect penis.
 んっ……す、するの？　このまま？　……な、何か言ってよ、おじさん。こわいよ……。=Nn...Y-You're gonna do it? Like this? ...S-Say something, Oji-san. You're scaring me...
 怯えるようなそぶりを見せてはいるが、膣穴はすでにしっとりと濡れている。これなら前戯に時間をかける必要はないだろう。=She had a nervous expression, but her vagina was already wet. You wouldn't need to do any foreplay.
-あなたは無言のまま、後ろからペニスを挿入にかかった。=Without saying anything, you got behind her and ready for insertion.
+あなたは無言のまま、後ろからペニスを挿入にかかった。=Without saying anything, you got behind her and readied for insertion.
 んっ！　あっ……ああっ……おちんぽ、来たぁ……＠=Nn! Aa...Aaa...Your penis, it's in...
 んっ！　あっ……ああっ……おちんぽ、来たぁ……=Nn! Aa...Aaa...Your penis, it's in...
 んっ！　あっ……ああっ……おちんぽ、来たぁ……<color%3D#fca4bc>❤<color%3Dwhite>=Nn! Aa...Aaa...Your penis, it's in...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -526,7 +526,7 @@
 あっ、んっ、はぁっ……=Aa, Nn, Haaa...
 あっ、んっ、はぁっ……<color%3D#fca4bc>❤<color%3Dwhite>　へっ？　……これに懲りたら気をつけろって？=Aa, Nn, Haaa...<color%3D#fca4bc>❤<color%3Dwhite>Ee? Are you trying to teach me a lesson?
 ふふっ……大丈夫だよ、おじさん……＠　私、おじさん以外の前で、こんな格好しないよ……あっ……あん……んっ……＠=Fufuu...Don't worry, Oji-san...I'll only expose myself like this to you...Aa...An...Nn...
-　私、おじさん以外の前で、こんな格好しないよ……あっ……あん……んっ……='ll only expose myself like this to you...Aa...An...Nn...
+　私、おじさん以外の前で、こんな格好しないよ……あっ……あん……んっ……=I'll only expose myself like this to you...Aa...An...Nn...
 ふふっ……大丈夫だよ、おじさん……=Fufuu...Don't worry Oji-san...
 ふふっ……大丈夫だよ、おじさん……<color%3D#fca4bc>❤<color%3Dwhite>　私、おじさん以外の前で、こんな格好しないよ……あっ……あん……んっ……<color%3D#fca4bc>❤<color%3Dwhite>=Fufuu...Don't worry, Oji-san...<color%3D#fca4bc>❤<color%3Dwhite>I'll only expose myself like this to you...Aa...An...Nn...<color%3D#fca4bc>❤<color%3Dwhite>
 それに、おじさんが私に夢中になってくれるのは嬉しいから……んっ……はっ……＠　また、持ってきてあげるね。=Besides, I'm glad that Oji-san is crazy about me...Nn...Haa...Next time, I'll bring my bloomers again.
@@ -835,7 +835,7 @@
 ……おじさんも、しっかり味わってね？　朝からおちんぽ欲しくて、とろとろになっちゃってる、エッチな女子校生のおまんこ……＠=...Oji-san too, right? Since this morning, your penis wanted the sloppy pussy of a naughty schoolgirl...
 ……おじさんも、しっかり味わってね？　朝からおちんぽ欲しくて、とろとろになっちゃってる、エッチな女子校生のおまんこ……=...Oji-san too, right? Since this morning, your penis wanted the sloppy pussy of a naughty schoolgirl...
 ……おじさんも、しっかり味わってね？　朝からおちんぽ欲しくて、とろとろになっちゃってる、エッチな女子校生のおまんこ……<color%3D#fca4bc>❤<color%3Dwhite>=...Oji-san too, right? Since this morning, your penis wanted the sloppy pussy of a naughty schoolgirl...<color%3D#fca4bc>❤<color%3Dwhite>
-言われるまでもないとばかりに、あなたは腰を前後に動かしていく。=Having heard that, you couldn't help but began to move.
+言われるまでもないとばかりに、あなたは腰を前後に動かしていく。=Having heard that, you couldn't help it and began to move.
 あっ……それ、好き……んっ、んんっ……おちんぽ、おまんこに馴染ませるみたいに、ゆっくり擦られるの……＠=Aa...That, I like it...Nn, Nnn...My pussy is slowly becoming familiar with your penis.
 あっ……それ、好き……んっ、んんっ……おちんぽ、おまんこに馴染ませるみたいに、ゆっくり擦られるの……=Aa...That, I like it...Nn, Nnn...My pussy is slowly becoming familiar with your penis.
 あっ……それ、好き……んっ、んんっ……おちんぽ、おまんこに馴染ませるみたいに、ゆっくり擦られるの……<color%3D#fca4bc>❤<color%3Dwhite>=Aa...That, I like it...Nn, Nnn...My pussy is slowly becoming familiar with your penis.<color%3D#fca4bc>❤<color%3Dwhite>
@@ -935,21 +935,21 @@
 お寝坊するだけでそんなに幸せを噛みしめて……可哀相なおじさん……=Despite oversleeping, you look really happy...poor Oji-san...
 お寝坊するだけでそんなに幸せを噛みしめて……可哀相なおじさん……今日は一日中、おじさんに尽くしてあげるからね。=Despite oversleeping, you look really happy...poor Oji-san...I'll serve you all day today, Oji-san.
 夕は起き上がるとキッチンまで小走りで向かい、エプロンを身につけて戻ってきた。=Yuu got up and head to the kitchen and came back with an apron on.
-それじゃ、旦那様。すぐに朝食の準備をいたしますね。=Well then, master. I'll prepare breakfast immediately.
+それじゃ、旦那様。すぐに朝食の準備をいたしますね。=Well then, Master. I'll prepare breakfast immediately.
 夕はエプロンの裾を持ち上げて一礼し、キッチンに戻っていった。メイドのつもりだろうか。=Yuu lifted the hem of the apron as she bowed and returned to the kitchen. She was like a maid.
 ……尻丸出しの後ろ姿を見送っていると、昨日あれだけしたのにむらむらとした気持ちがわき上がってくる。=Seeing her bare buttocks from behind, you got turned on even after all you did last night.
 あら？=Oh?
 どうしたんですか？　旦那様は、ゆっくり寛いでいてくれないと……=What happened? Master should be relaxing...
 どうしたんですか？　旦那様は、ゆっくり寛いでいてくれないと……Ah....=What happened? Master should be relaxing...Ah...
 んっ……＠=Nn...
-もう、旦那様ったらお戯れを……=Gosh, master is so horny...
-もう、旦那様ったらお戯れを……んっ……=Gosh, master is so horny...Nn...
-もう、旦那様ったらお戯れを……んっ……<color%3D#fca4bc>❤<color%3Dwhite>=Gosh, master is so horny...Nn...<color%3D#fca4bc>❤<color%3Dwhite>
+もう、旦那様ったらお戯れを……=Gosh, Master is so horny...
+もう、旦那様ったらお戯れを……んっ……=Gosh, Master is so horny...Nn...
+もう、旦那様ったらお戯れを……んっ……<color%3D#fca4bc>❤<color%3Dwhite>=Gosh, Master is so horny...Nn...<color%3D#fca4bc>❤<color%3Dwhite>
 エプロンをはだいて胸を揉みしだき、後ろを向いて尻を突き出すように耳元で囁く。=You pulled off her apron and groped her chest. Then whispered in her ears to turn around and stick her butt towards you.
-……は、はい。かしこまりました。=...Y-Yes. I understand, master.
+……は、はい。かしこまりました。=...Y-Yes. I understand, Master.
 あくまでメイドという体を崩さず、夕はあなたの言葉に従ってくれた。=While maintaining the maid role-play, Yuu obeyed your request.
 
-もう、旦那様ったら……朝食より、私をご所望ですか？=Geez, master...Rather than breakfast, you would rather have me?
+もう、旦那様ったら……朝食より、私をご所望ですか？=Geez, Master...Rather than breakfast, you'd have me?
 満更でもなさそうに夕は手をシンクについて、可愛らしいお尻を突き出してくれる。=With Yuu's hands in the sink, she propped her butt towards you.
 えへへ……こんなに硬くして……＠　昨日も、あんなにしたのに……本当、エッチなんですからぁ……＠=Ehehe...You're already so hard...Even after what we did last night...You're such a pervert...
 えへへ……こんなに硬くして……=Ehehe...You're already so hard...
@@ -968,14 +968,14 @@
 お寝坊したのに、欲しがりなメイドおまんこに……たくさん、お仕置きせっくす、してください…… =I overslept, so punish this maid's pussy...that you desire so much, punish me a lot...
 お寝坊したのに、欲しがりなメイドおまんこに……たくさん、お仕置きせっくす、してください…… <color%3D#fca4bc>❤<color%3Dwhite>=I overslept, so punish this maid's pussy...that you desire so much, punish me a lot...<color%3D#fca4bc>❤<color%3Dwhite>
 夕もノリノリで、朝のなりきりセックスに興じてくれた。=It seemed that Yuu was also getting excited.
-ふあっ＠　ふぁっ＠　んっ、あっ＠　素敵です、旦那様ぁ……ふっ……ん……んんっ＠=Fuaa Faa Nn, Aa It's wonderful, master...Fuu...Nn...Nnn
-　素敵です、旦那様ぁ……ふっ……ん……んんっ=It's wonderful, master...Fuu...Nn...Nnn
+ふあっ＠　ふぁっ＠　んっ、あっ＠　素敵です、旦那様ぁ……ふっ……ん……んんっ＠=Fuaa Faa Nn, Aa It's wonderful, Master...Fuu...Nn...Nnn
+　素敵です、旦那様ぁ……ふっ……ん……んんっ=It's wonderful, Master...Fuu...Nn...Nnn
 ふあっ=Fuaa
-ふあっ<color%3D#fca4bc>❤<color%3Dwhite>　ふぁっ<color%3D#fca4bc>❤<color%3Dwhite>　んっ、あっ<color%3D#fca4bc>❤<color%3Dwhite>　素敵です、旦那様ぁ……ふっ……ん……んんっ<color%3D#fca4bc>❤<color%3Dwhite>=Fuaa<color%3D#fca4bc>❤<color%3Dwhite>Faa<color%3D#fca4bc>❤<color%3Dwhite>Nn, Aa<color%3D#fca4bc>❤<color%3Dwhite>It's wonderful, master...Fuu...Nn...Nnn<color%3D#fca4bc>❤<color%3Dwhite>
+ふあっ<color%3D#fca4bc>❤<color%3Dwhite>　ふぁっ<color%3D#fca4bc>❤<color%3Dwhite>　んっ、あっ<color%3D#fca4bc>❤<color%3Dwhite>　素敵です、旦那様ぁ……ふっ……ん……んんっ<color%3D#fca4bc>❤<color%3Dwhite>=Fuaa<color%3D#fca4bc>❤<color%3Dwhite>Faa<color%3D#fca4bc>❤<color%3Dwhite>Nn, Aa<color%3D#fca4bc>❤<color%3Dwhite>It's wonderful, Master...Fuu...Nn...Nnn<color%3D#fca4bc>❤<color%3Dwhite>
 柔尻に向かってパンパンと腰を打ち付けると、夕はすぐに快感に身悶える。=When you hit your waist against her soft buttocks, Yuu felt pleasure.
-あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……＠=Aa Aa...I'm being eaten up by master...Your big penis, my pussy, it's stirring me up...
-あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……=Aa Aa...I'm being eaten up by master...Your big penis, my pussy, it's stirring me up...
-あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……<color%3D#fca4bc>❤<color%3Dwhite>=Aa Aa...I'm being eaten up by master...Your big penis, my pussy, it's stirring me up...<color%3D#fca4bc>❤<color%3Dwhite>
+あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……＠=Aa Aa...I'm being eaten up by Master...Your big penis, my pussy, it's stirring me up...
+あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……=Aa Aa...I'm being eaten up by Master...Your big penis, my pussy, it's stirring me up...
+あっあっ……私、旦那様に、食べられちゃってます……おっきなおちんぽで、おまんこのお肉、全部、ぐちゅぐちゅってかき混ぜられて……<color%3D#fca4bc>❤<color%3Dwhite>=Aa Aa...I'm being eaten up by Master...Your big penis, my pussy, it's stirring me up...<color%3D#fca4bc>❤<color%3Dwhite>
 舌ったらずで、蕩けきった声。何度交わっても飽きることがない。=You would never get tired of her enchanting voice no matter how many times you heard it.
 ふぁっ＠　んっ、ふぅっ……ダメ……＠　そんなに優しく、奥をトントンってされたら……想像しちゃいます、からぁ……＠=Faa Nn, Fuuu...Noo...If you keep hitting me there...I'll start imagining stuff...
 　そんなに優しく、奥をトントンってされたら……想像しちゃいます、からぁ……=If you keep hitting me there...I'll start imagining stuff...
@@ -1180,7 +1180,7 @@
 はぁ……はぁ……気持ちいいよお……あっ、んっ、はぁっ……やぁっ……んあっ＠=Haa...Haa...It feels so good...Aa, Nn, Haaa...Yaaa...Naa
 はぁ……はぁ……気持ちいいよお……あっ、んっ、はぁっ……やぁっ……んあっ=Haa...Haa...It feels so good...Aa, Nn, Haaa...Yaaa...Naa
 はぁ……はぁ……気持ちいいよお……あっ、んっ、はぁっ……やぁっ……んあっ<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Haa...It feels so good...Aa, Nn, Haaa...Yaaa...Naa<color%3D#fca4bc>❤<color%3Dwhite>
-普段の振る舞いからは想像も付かない夕の大胆なオナニーから、あなたは目を離すことができない。=Yuu's bold masturbation didn't match with her usual behavior, you couldn't help but kept staring.
+普段の振る舞いからは想像も付かない夕の大胆なオナニーから、あなたは目を離すことができない。=Yuu's bold masturbation didn't match with her usual behavior, you couldn't help but keep staring.
 興奮に息を荒げて、ここ数日精液を貯めたままだったペニスは、はち切れそうに勃起していた。=Your irritated penis, which held on to semen for several days, was erect to its limit.
 あんっ、あんっ……んっ……＠　んあっ＠　おじさん……はぅ……ん……んんっ＠=Ann, Ann...Nn...Naa Oji-san...Hu...Nn...Nnn
 あんっ、あんっ……んっ……=Ann, Ann...Nn...
@@ -1264,7 +1264,7 @@
 はぁっ……はぁっ……だ、だめぇ……匂いなんて、嗅がないで……＠=Haaa...Haaa...N-Noo...Don't smell it...
 はぁっ……はぁっ……だ、だめぇ……匂いなんて、嗅がないで……=Haaa...Haaa...N-Noo...Don't smell it...
 はぁっ……はぁっ……だ、だめぇ……匂いなんて、嗅がないで……<color%3D#fca4bc>❤<color%3Dwhite>=Haaa...Haaa...N-Noo...Don't smell it...<color%3D#fca4bc>❤<color%3Dwhite>
-夕は顔を真っ赤にしながら、これからされる行為への期待にキュッと目を瞑った。=Yuu's face was flushed with red, she closed her eyes, not wanting to see what would come next.
+夕は顔を真っ赤にしながら、これからされる行為への期待にキュッと目を瞑った。=Yuu's face was flushed with red, she closed her eyes, preparing for what would come next.
 あっ……あんっ……＠　ふぁ……おじさんっ……んっ、ああっ＠=Aa...Ann...Fa...Oji-san...Nn, Aaa
 あっ……あんっ……=Aa...Ann...
 　ふぁ……おじさんっ……んっ、ああっ=Fa...Oji-san...Nn, Aaa
@@ -1564,7 +1564,7 @@
 何かあったのかって？　な、なんにもないよ。=Did something happen? N-No, nothing at all.
 もしかしたらこれは風邪の引き始めで、夕も同じく調子が悪いのかもしれない。=Perhaps this was a beginning of a cold, Yuu may have caught one too.
 念のために少しでも体調が悪ければ家事はしなくていいから、ゆっくり休むように伝えておく。=Since she might not be feeling well, you told Yuu that she didn't have to do housework today and suggested that she should rest.
-うう、優しさが苦しい……おじさん、ごめんね……。=Uu, you're so nice...Oji-san, sorry...
+うう、優しさが苦しい……おじさん、ごめんね……。=Uu, if you're so nice...Oji-san, sorry...
 ……今日の射精可能回数が 3 減りました。=...The number of ejaculations possible today has decreased by three.
 アルバムにシーン13が追加されました。=Scene 13 has been added to the album.
 
@@ -1693,7 +1693,7 @@
 はぁ……はぁ……よしよし……全部、私のナカに出しちゃおうね……はぁ……ふぅっ……ふっ……んっ……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Haa...Good, good...You can let all of it out inside me...Haa...Fuuu...Fuu...Nn...<color%3D#fca4bc>❤<color%3Dwhite>
 こんなに激しいセックスをしたのに、とうとうおじさんが目を覚ますことはなかった。=Even after such intense sex, Oji-san never woke up.
 はぁ……はぁっ、はぁっ……ふっ……んっ……えへへ……いっぱい、出てきた……＠=Haa...Haaa, Haaa...Fuu...Nn...Ehehe...So much, came out...
-おちんぽを抜くと、おまんこからどろどろと大量の精液が溢れてくる。=As I pulled out of his penis, a large amount of semen spilled out of my pussy.
+おちんぽを抜くと、おまんこからどろどろと大量の精液が溢れてくる。=As I pulled out his penis, a large amount of semen spilled out of my pussy.
 ふっ……んっ、ん……どんどん、奥から溢れてきちゃう……んんっ……＠=Fuu...Nn, Nn...So much is flowing out from deep inside...Nnn...
 ふっ……んっ、ん……どんどん、奥から溢れてきちゃう……んんっ……=Fuu...Nn, Nn...So much is flowing out from deep inside...Nnn...
 ふっ……んっ、ん……どんどん、奥から溢れてきちゃう……んんっ……<color%3D#fca4bc>❤<color%3Dwhite>=Fuu...Nn, Nn...So much is flowing out from deep inside...Nnn...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -2136,16 +2136,16 @@
 えへへ……おやすみ、おじさん……。=Ehehe...Good night, Oji-san...
 
 // Epilogue
-えへへ……おかえりなさい、あなた＠=Ehhehe...Welcome home, darling.
-えへへ……おかえりなさい、あなた=Ehhehe...Welcome home, darling.
-えへへ……おかえりなさい、あなた<color%3D#fca4bc>❤<color%3Dwhite>=Ehhehe...Welcome home, darling.<color%3D#fca4bc>❤<color%3Dwhite>
+えへへ……おかえりなさい、あなた＠=Ehhehe...Welcome home, Darling.
+えへへ……おかえりなさい、あなた=Ehhehe...Welcome home, Darling.
+えへへ……おかえりなさい、あなた<color%3D#fca4bc>❤<color%3Dwhite>=Ehhehe...Welcome home, Darling.<color%3D#fca4bc>❤<color%3Dwhite>
 うん、お腹の子もとっても元気だよ。=Yea, the baby is doing well, too.
 それと、あのね……お医者さんがね、もう安定期だし……激しくしなければ、エッチしても大丈夫だって……。=And, You see...the doctor said it's a stable period now...So if you're not too rough, we can have sex today...
 だから、その……今日は久しぶりに……どう、かな……？=So with that...it's been a while...How about it...?
 も、もう……だからって、すぐしなくてもいいじゃん……ご飯冷めちゃうよ？=G-Geez...Already, we didn't have to do it right away...Dinner will get cold you know?
 すぐ済むから大丈夫って……えー……それも、なんかショック……。=Well, it'll be fine if we finish soon...Eee...That's also not good...
 ……えへへ、そうだよね。赤ちゃんに障ったらいけないもんね。=...Ehehe, that's right. We can't disturb the baby now.
-ね、あなた……これから二人の時間は、あんまりなくなっちゃうかもしれないけど……その分、たまにはこうして深く……愛し合おうね。=Hey, darling... from now on we might not get much time alone... so in return, just like now... let's love each other deeply.
+ね、あなた……これから二人の時間は、あんまりなくなっちゃうかもしれないけど……その分、たまにはこうして深く……愛し合おうね。=Hey, Darling... from now on we might not get much time alone... so in return, just like now... let's love each other deeply.
 あっ、んんっ……入って、来たぁ……＠=Aa, Nnn...It's coming, inside...
 あっ、んんっ……入って、来たぁ……=Aa, Nnn...It's coming, inside...
 あっ、んんっ……入って、来たぁ……<color%3D#fca4bc>❤<color%3Dwhite>=Aa, Nnn...It's coming, inside...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -2165,9 +2165,9 @@
 はんっ……んっ、あっ…………=Hann...Nn, Aa...
 　ね……あなたも、私のおまんこ、気持ちいい……？=Hey...Darling, does my pussy feel good too...?
 はんっ……んっ、あっ…………<color%3D#fca4bc>❤<color%3Dwhite>　ね……あなたも、私のおまんこ、気持ちいい……？=Hann...Nn, Aa...<color%3D#fca4bc>❤<color%3Dwhite>Hey...Darling, does my pussy feel good too...?
-初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……＠=It feels as tight as my first time...Fufu, darling...I still remember that time...
-初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……=It feels as tight as my first time...Fufu, darling...I still remember that time...
-初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……<color%3D#fca4bc>❤<color%3Dwhite>=It feels as tight as my first time...Fufu, darling...I still remember that time...<color%3D#fca4bc>❤<color%3Dwhite>
+初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……＠=It feels as tight as my first time...Fufu, Darling...I still remember that time...
+初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……=It feels as tight as my first time...Fufu, Darling...I still remember that time...
+初めての時みたいに締まるって……ふふ、あなたったら……あの時のこと、まだ覚えてるんだぁ……<color%3D#fca4bc>❤<color%3Dwhite>=It feels as tight as my first time...Fufu, Darling...I still remember that time...<color%3D#fca4bc>❤<color%3Dwhite>
 はぁっ、あ、だめ……あなたったら、浅いとこばっかり擦るから……もうイっちゃいそう……＠=Haa, Aa, Noo...Darling, if you rub so shallowly...I'll cum soon...
 はぁっ、あ、だめ……あなたったら、浅いとこばっかり擦るから……もうイっちゃいそう……=Haa, Aa, Noo...Darling, if you rub so shallowly...I'll cum soon...
 はぁっ、あ、だめ……あなたったら、浅いとこばっかり擦るから……もうイっちゃいそう……<color%3D#fca4bc>❤<color%3Dwhite>=Haa, Aa, Noo...Darling, if you rub so shallowly...I'll cum soon...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -2201,13 +2201,13 @@
 　どろどろって、濃いのたくさん溢れてきた……=So much of your thick stuff is flowing out...
 んっ……いっぱい出たね……=Nn...You let out a lot
 んっ……いっぱい出たね……<color%3D#fca4bc>❤<color%3Dwhite>　どろどろって、濃いのたくさん溢れてきた……<color%3D#fca4bc>❤<color%3Dwhite>=Nn...You let out a lot<color%3D#fca4bc>❤<color%3Dwhite>So much of your thick stuff is flowing out...<color%3D#fca4bc>❤<color%3Dwhite>
-あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……＠=Gosh, darling, you let out too much...It'll be hard to clean it with this stomach...
-あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……=Gosh, darling, you let out too much...It'll be hard to clean it with this stomach...
-あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……<color%3D#fca4bc>❤<color%3Dwhite>=Gosh, darling, you let out too much...It'll be hard to clean it with this stomach...<color%3D#fca4bc>❤<color%3Dwhite>
+あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……＠=Gosh, Darling, you let out too much...It'll be hard to clean it with this stomach...
+あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……=Gosh, Darling, you let out too much...It'll be hard to clean it with this stomach...
+あなたったら、ちょっと出しすぎだよ……このお腹だと、洗うのも大変なんだから……<color%3D#fca4bc>❤<color%3Dwhite>=Gosh, Darling, you let out too much...It'll be hard to clean it with this stomach...<color%3D#fca4bc>❤<color%3Dwhite>
 ……あなたが、洗ってくれるの？　えへへ……じゃあ、お願いしちゃおっかな……＠=...Darling will wash me? Ehehe...Well then, if you can so kindly...
 ……あなたが、洗ってくれるの？　えへへ……じゃあ、お願いしちゃおっかな……=...Darling will wash me? Ehehe...Well then, if you can so kindly...
 ……あなたが、洗ってくれるの？　えへへ……じゃあ、お願いしちゃおっかな……<color%3D#fca4bc>❤<color%3Dwhite>=...Darling will wash me? Ehehe...Well then, if you can so kindly...<color%3D#fca4bc>❤<color%3Dwhite>
-それじゃ、お風呂行こっか……よろしくね、あなた……＠=Well then, let's go in the bath...I'll be in your care, darling...
+それじゃ、お風呂行こっか……よろしくね、あなた……＠=Well then, let's go in the bath...I'll be in your care, Darling...
 ……はっ。=...Ah
 気がついたら私はテーブルに突っ伏していた。=I realized that I fell asleep on the table.
 夜ご飯を作ってからパソコンと睨めっこしているうちに、眠ってしまっていたらしい。=I likely fell asleep after preparing dinner and using the PC.
