--- a/Translation/Interaction Screen.txt
+++ b/Translation/Interaction Screen.txt
@@ -29,7 +29,7 @@
 えっと……どうすればいい？=Umm...What should I do?
 	#out of rubber
 ……シたかったら、ちゃんと準備しておいてね？=...If you want to do it, please prepare everything properly.
-きょ、今日はだめだよ。ゴム切れてるし。=Kyaa, today is no good. We're out of rubbers.
+きょ、今日はだめだよ。ゴム切れてるし。=Kyaa, Today is no good. We're out of rubbers.
 
 ダメ。=No.
 何度頼まれたって無理だからね。=It doesn't matter how many times you ask.
@@ -95,7 +95,7 @@ Aa...う、うん。しよっか。=Aa...O-Ok. Shall we?
 
 なんで帰ってきたのにまだ働くの？　意味わかんない！= Why are you still working even though you just came back? I don't understand.
 うえー、やめなよぉ。=Wow, you never stop.
-ほらほら。そんなことよりこっちに来て、私と一緒にまったりしよ？　ね？=Hey Hey. Can you come over here and relax with me?
+ほらほら。そんなことよりこっちに来て、私と一緒にまったりしよ？　ね？=Hey Hey. Can't you come over here and relax with me?
 お仕事？　もう、ほどほどにね。=Work? Gosh, don't push yourself too hard.
 夕は困った顔をしつつ、渋々お茶を煎れて見守ってくれた。=Yuu made a troubled face and drank some tea while watching over you.
 あなたは夕と雑談しながら、持ち帰った仕事……メールの返信や資料のまとめを少し片付けた。=While talking with Yuu, you were going through your emails, sorting documents, and tidying your work up.
@@ -107,16 +107,16 @@ Aa...う、うん。しよっか。=Aa...O-Ok. Shall we?
 ふふふ、任せてよおじさん……=Fufufu, leave it to me Oji-san.
 ふふふ、任せてよおじさん……私もちゃんと、勉強してるんだからね。=Fufufu, leave it to me Oji-san. I've been studying properly.
 驚いたことに、夕はツールのコードが何をしているのかそれなりに理解していた。=Surprisingly, Yuu understood the tool's code.
-あなたは時々夕の疑問に答えながら、二人で和気藹々と作業を進めていく。=While answering occasionally some of Yuu's questions, the two of you worked together.
+あなたは時々夕の疑問に答えながら、二人で和気藹々と作業を進めていく。=While occasionally answering some of Yuu's questions, the two of you worked together.
 山のようにあったチェックリストが埋まるのに、そう時間はかからなかった。=It didn't take long to finish the long checklist you had.
 ……夕と一緒に、持ち帰った仕事を少し片付けた。=...Yuu took a portion of the work you brought home.
 ---------------------------------------------------------------
 // Serve Tea
 
-_コーヒーを煎れる(あと<param%3D選択肢０>)= Coffee (+<param%3D選択肢０>AP)
-_カモミールにする(あと<param%3D選択肢１>)= Chamomile tea
-コーヒーを煎れる(あと<param%3D選択肢０>)= Coffee (+<param%3DChoice０>AP)
-カモミールにする(あと<param%3D選択肢１>)= Chamomile tea
+_コーヒーを煎れる(あと<param%3D選択肢０>)= Coffee (+<param%3D選択肢０>)
+_カモミールにする(あと<param%3D選択肢１>)= Chamomile Tea (+<param%3D選択肢１>)
+コーヒーを煎れる(あと<param%3D選択肢０>)= Coffee (+<param%3DChoice０>)
+カモミールにする(あと<param%3D選択肢１>)= Chamomile Tea(+<param%3D選択肢１>)
 
 #if "Prepare Coffee"
 
@@ -306,7 +306,7 @@ Kyaa ……ちょっとぉ、今こっそりめくろうとしたでしょー？
 あ……もしかして、重かったかな。=Ah...Maybe, it's kind of hard to talk about.
 あ……もしかして、重かったかな。そ、そっか……なら良かった。=Ah...Maybe, it's kind of hard to talk about.\nI, I see...That makes me happy though.
 あのさ……私、良い子になりたいんだよね。=You know...\nI want to be a good girl.
-土曜の朝には、ちゃんと出ていくから……それまでここで、良い子の練習させてくれないかな。=I'll leave on saturday morning so...\nuntil then, will you let me practice being a good girl?
+土曜の朝には、ちゃんと出ていくから……それまでここで、良い子の練習させてくれないかな。=I'll leave on Saturday morning so...\nuntil then, will you let me practice being a good girl?
 
 	#2
 あはは、そんなのいないよー。私、ずっと女子校だったし。= Ahaha, I have nobody like that. I've always been in girl's schools.
@@ -350,12 +350,12 @@ Kyaa ……ちょっとぉ、今こっそりめくろうとしたでしょー？
 厳しいっていうか、制限がすごいんだよね。あれもだめ、これもだめって感じで……だから私、早く大人になりたかったよ。=My family is strict about what I can and can't do. Not just that, but I also felt like a failure...That's why I wanted to become an adult.
 習い事ばっかりだし、雑誌とか漫画もダメだから、こっそり買って学校で回し見とかしてたなぁ……。=I had lessons all day long and I couldn't read magazines or manga, so I bought them secretly and read at school...
 	#3
-……夕と他愛のない話で盛り上がった。=...You two had some exciting chat about love.	
+……夕と他愛のない話で盛り上がった。=...The two of you had some exciting chat about love.
 	#4
 ＴＶでも見るかって？=Do you want to watch TV?
 うーん、いいよ。どうせこの時間じゃ、ニュースしかやってないでしょ。= Well, that's fine. After all, at this time, there's only the news.
 ＴＶでも見るかって？　うーん、いいよ。どうせこの時間じゃ、ニュースしかやってないでしょ。=Do you want to watch TV? Well, that's fine. After all, at this time, there's only the news.
-夕はそう言うが、まだ普通にアニメもバラエティも放送されている時間だ。=Yuu said that, but there were still anime and variety shows being broadcast.
+夕はそう言うが、まだ普通にアニメもバラエティも放送されている時間だ。=Yuu said that, but there were still anime and variety shows being broadcasted.
 試しに電源を入れてみせると、夕は目を丸くして驚いた。=When I turned on the TV, Yuu opened her eyes in surprise.
 えええええええ！？=Eeeeeee!?
 ……こんな世界があったんだ。私、何も知らなかった……。=...There was such a world. I never knew...
