--- a/Translation/Game.txt
+++ b/Translation/Game.txt
@@ -212,11 +212,12 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 ほらほら、早くお布団に入って。おやすみなさい！=Come come, get in bed. Good night!
 
 どうかな。変なとこない？=How is it? It's not strange, is it?
-　そ、そう？　なら、良いんだけど……。=R-Really? That's good then...
+　そ、そう？　なら、良いんだけど……。= R-Really? That's good then...
 えへへ……それじゃ、いこっか。=Ehehe...Well then, let's go.
 有給を取ったあなたは夕を連れて、兼ねてより計画していた温泉旅行へと向かった。=After getting paid, you took Yuu on the planned hot spring trip.
 昼前に家を出て、片道1時間半ほどの旅館を目指す。=Leaving before noon, the two of you boarded a train that would arrive at the inn in about an hour and a half. 
 なんかこういうの、修学旅行みたいでわくわくするね。=This kind of feels like a school trip, it's exciting.
+ガラガラに空いた電車内で一緒に駅弁を食べながら、夕はそんなことをいう。=Yuu said that as she was eating her lunch on the moving train.
 旅館って行ったことないから、楽しみだなー。= I'm looking forward to it since I've never been to a Ryokan.
 ていうか私、国内旅行って初めてだよ。=I mean, I've never been on a trip before.
 ていうか私、国内旅行って初めてだよ。旅館って行ったことないから、楽しみだなー。=I mean, I've never been on a trip before. I'm looking forward to it since I've never been to a Ryokan.
@@ -265,7 +266,7 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 あー……ちょっとのぼせた……。=Aa...I feel a little dizzy...
 貸切露天で存分に羽目を外したあなた達は、何食わぬ顔で一階のカフェスペースで涼んでいた。=After enjoying the open-air bath, the two of you were now cooling off at the cafe.
 ね、おじさん。奥の方に卓球台あったよ。後で一緒にやろうよ。=Hey, Oji-san. There's table tennis in the back. Let's play it together later.
-ねえ、お願いー。=Hey, please.
+ねえ、お願いー。= Hey, please.
 温泉といえば定番なんでしょ？=Speaking of hot springs, isn't it a standard?
 温泉といえば定番なんでしょ？ねえ、お願いー。=Speaking of hot springs, isn't it standard? Hey, please.
 でやー！=Oh!
