--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -18,6 +18,41 @@
 おじさん……出してないけど、いいの……？=Oji-san...You didn't cum yet, is it fine...?
 え……もう、終わり……？=Eh...We're done already...?
 
+はむ……んちゅ……。=Hamu...Nchuu...
+ちゅっ……れろ……。=Chuu...Rero...
+　そんなに、擦っちゃ……ふぁ……はぁっ……ふあっ=If you rub that much...Fa...Haa...Fuaa
+やぁっ<color%3D#fca4bc>❤<color%3Dwhite>　ふぁっ<color%3D#fca4bc>❤<color%3Dwhite>　そんなに、擦っちゃ……ふぁ……はぁっ……ふあっ<color%3D#fca4bc>❤<color%3Dwhite>=Yaaa<color%3D#fca4bc>❤<color%3Dwhite>Faa<color%3D#fca4bc>❤<color%3Dwhite>If you rub that much...Fa...Haa...Fuaa<color%3D#fca4bc>❤<color%3Dwhite>
+ふぁっ……あっ……ぎゅって強く、摘まんじゃ、だめ……=Faa...Aa...You're being so rough, Noo...
+ふぁっ……あっ……ぎゅって強く、摘まんじゃ、だめ……<color%3D#fca4bc>❤<color%3Dwhite>=Faa...Aa...You're being so rough, Noo...<color%3D#fca4bc>❤<color%3Dwhite>
+
+やっ……そこは、だめ……=Yaa...Not there...
+やっ……そこは、だめ……<color%3D#fca4bc>❤<color%3Dwhite>=Yaa...Not there...<color%3D#fca4bc>❤<color%3Dwhite>
+
+ほんと、やらしいんだから……。=That's really naughty...
+あっ、はぁっ……乳首、くりくりってされるの、気持ちいい……=Aa, Haaa...My nipples feel so weird, it feels good...
+あっ、はぁっ……乳首、くりくりってされるの、気持ちいい……<color%3D#fca4bc>❤<color%3Dwhite>=Aa, Haaa...My nipples feel so weird, it feels good...<color%3D#fca4bc>❤<color%3Dwhite>
+あっ、あん……すごい……すごいよぉ……＠　あっ、んっ……ふぁっ……！=Aa, An...Amazing...So good...Aa, Nn...Faa...!
+　あっ、んっ……ふぁっ……！=Aa, Nn...Faa...!
+あっ、あん……すごい……すごいよぉ……=Aa, An...Amazing...So good...
+あっ、あん……すごい……すごいよぉ……<color%3D#fca4bc>❤<color%3Dwhite>　あっ、んっ……ふぁっ……！=Aa, An...Amazing...So good...<color%3D#fca4bc>❤<color%3Dwhite>Aa, Nn...Faa...!
+蕩けきった膣穴に指を何度も出し入れして、ぐりぐりと掻き回す。=You fingered her vagina and stirred up her insides.
+
+あっ、あん……指、気持ちいい……＠　気持ちいいよぉ……ふぁっ……！=Aa, An...Your fingers, so good...It feels so good...Faa...!
+あっ、あん……指、気持ちいい……=Aa, An...Your fingers, so good...
+　気持ちいいよぉ……ふぁっ……！=It feels so good...Faa...!
+あっ、あん……指、気持ちいい……<color%3D#fca4bc>❤<color%3Dwhite>　気持ちいいよぉ……ふぁっ……！=Aa, An...Your fingers, so good...<color%3D#fca4bc>❤<color%3Dwhite>It feels so good...Faa...!
+ふふ……おっぱい、好きなんだ？=Fufu...You love boobs, don't you?
+
+んっ……もう、本当に好き放題、捏ね回してくれちゃって……=Nn...Gosh, You really like them, you're fondling them so much.
+んっ……もう、本当に好き放題、捏ね回してくれちゃって……<color%3D#fca4bc>❤<color%3Dwhite>=Nn...Gosh, You really like them, you're fondling them so much.<color%3D#fca4bc>❤<color%3Dwhite>
+
+……なんとなく、このまま入ると気まずいことになりそうな気がしたあなたは、少しドアを開けて中の様子を伺う。=... somehow, I felt that it would be awkward to enter this way, you open the door a little and see inside.
+
+うー、おじさん……なんか、変態っぽい……。=Uu, Oji-san...This is kind of perverted...
+よしよし……好きなだけ、触って良いからね……=There, there...You can touch it as much as you'd like...
+よしよし……好きなだけ、触って良いからね……<color%3D#fca4bc>❤<color%3Dwhite>=There, there...You can touch it as much as you'd like...<color%3D#fca4bc>❤<color%3Dwhite>
+
+
 // Reverse Cowgirl
 　……わ、わかった。=...I-I get it.
 後ろ向いたまま、上に乗って欲しいって？=You want me to get on with my back facing you?
@@ -244,7 +279,7 @@
 はっ……あっ、はん……やぁ……えっちなおと、しちゃってる……=Haa...Aa, Han...Yaa...I'm making such naughty sounds...
 はっ……あっ、はん……やぁ……えっちなおと、しちゃってる……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Aa, Han...Yaa...I'm making such naughty sounds...<color%3D#fca4bc>❤<color%3Dwhite>
 
-愛液を絡めた指でクリトリスを捏ね回すと、夕はシーツをぎゅっと掴んで身悶えた。=I kneaded her clitoris with my fingers wet with her love juices, Yuu grabbed the sheets tightly.
+愛液を絡めた指でクリトリスを捏ね回すと、夕はシーツをぎゅっと掴んで身悶えた。=You kneaded her clitoris with your fingers wet with her love juices, Yuu grabbed the sheets tightly.
 やっ、そこ……だめぇ……=Yaa, That place...Noo...
 やっ、そこ……だめぇ……＠　んあっ、ふぁ……はぅ……あっ……！=Yaa, That place...Noo...Naa, Fa...Hau...Aa....!
 やっ、そこ……だめぇ……<color%3D#fca4bc>❤<color%3Dwhite>　んあっ、ふぁ……はぅ……あっ……！=Yaa, That place...Noo...<color%3D#fca4bc>❤<color%3Dwhite>Naa, Fa...Hau...Aa....!
@@ -479,7 +514,9 @@
 
 見慣れない袋がある……体操着袋だろうか。=There was an unfamiliar bag.
 あ、ごめん。休みのうちに洗濯しようと思って、置きっぱなしだった……。=Ah, Sorry. I was thinking about washing them on the weekend.
-え、着てみてほしいの？　汚れてるから、恥ずかしいんだけど……もう、しょうがないなぁ。=Eh, you want me to wear it? It's embarrassing, since it's dirty...Geez, it can't be helped.
+え、着てみてほしいの？=Eh, do you want me to wear it?
+汚れてるから、恥ずかしいんだけど……もう、しょうがないなぁ。= It's embarrassing, since it's dirty...\nGeez, it can't be helped.
+え、着てみてほしいの？　汚れてるから、恥ずかしいんだけど……もう、しょうがないなぁ。=Eh, you want me to wear it? It's embarrassing, since it's dirty...\nGeez, it can't be helped.
 へ？　ブルマ？　これって珍しいの？=Eh? Bloomers? Is it unusual?
 もうほとんど使われてないはず？　ふーん……うちが女子校だから、まだ残ってるのかなぁ。=They're not used anymore? Well...I'm at an all-girls school, so they're still around.
 動きやすいことは確かだけど、確かにすごい格好だよね。=It's true that they're easy to move in, but they're certainly revealing.
@@ -1124,7 +1161,7 @@
 はぁ……はぁ……んっ、あっ……＠=Haa...Haa...Nn, Aa...
 はぁ……はぁ……んっ、あっ……=Haa...Haa...Nn, Aa...
 はぁ……はぁ……んっ、あっ……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Haa...Nn, Aa...<color%3D#fca4bc>❤<color%3Dwhite>
-…なんとなく、このまま入ると気まずいことになりそうな気がしたあなたは、少しドアを開けて中の様子を伺う。=...It'd be awkward if you walked in now, so you opened the door a little to peek.
+……なんとなく、このまま入ると気まずいことになりそうな気がしたあなたは、少しドアを開けて中の様子を伺う。=...It'd be awkward if you walked in now, so you opened the door a little to peek.
 あ、やっと出てきた。珍しく長風呂だったね。=Ah, you finally came out. That was longer than usual.
 う、ううん。気にしないで。別に、待ってたわけじゃないから……。=N-No, don't worry. I wasn't really waiting...
 ……じゃ、私も入ってこよっと。今日は汗掻いちゃったからね。=...Well, I'll go in now. I sweat a lot today.
